移植自主项目的GPU和molang优化